--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
             "styles": [
               "src/styles.scss",
               "src/assets/scss/style.scss",
+              "node_modules/@ngneat/hot-toast/src/styles/styles.css"
             ],
             "scripts": []
           },
