--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ngneat/hot-toast": "^5.0.2",
+    "@ngneat/overview": "^3.0.0",
     "angular-tabler-icons": "^2.7.0",
     "apexcharts": "^3.35.3",
     "ng-apexcharts": "1.7.1",
+    "ngx-toastr": "^16.2.0",
     "rxjs": "~7.5.0",
     "sass": "^1.57.1",
     "tslib": "^2.3.0",
