--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.4",
-    "@angular/cdk": "^15.0.4",
+    "@angular/cdk": "^17.0.1",
     "@angular/common": "^17.0.4",
     "@angular/compiler": "^17.0.4",
     "@angular/core": "^17.0.4",
     "@angular/forms": "^17.0.4",
-    "@angular/material": "^15.0.4",
+    "@angular/material": "^17.0.1",
     "@angular/platform-browser": "^17.0.4",
     "@angular/platform-browser-dynamic": "^17.0.4",
     "@angular/router": "^17.0.4",
     "@ngneat/hot-toast": "^5.0.2",
     "@ngneat/overview": "^3.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "angular-tabler-icons": "^2.42.0",
     "apexcharts": "^3.35.3",
     "ng-apexcharts": "1.7.1",
