--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@angular/platform-browser": "^17.0.4",
     "@angular/platform-browser-dynamic": "^17.0.4",
     "@angular/router": "^17.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@ngneat/hot-toast": "^5.0.2",
     "@ngneat/overview": "^3.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@popperjs/core": "^2.11.8",
+    "@swimlane/ngx-datatable": "^20.1.0",
     "angular-tabler-icons": "^2.42.0",
     "apexcharts": "^3.35.3",
+    "bootstrap": "^5.3.2",
     "ng-apexcharts": "1.7.1",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.5.0",
@@ -37,6 +41,7 @@
     "@angular-devkit/build-angular": "^17.0.3",
     "@angular/cli": "~17.0.3",
     "@angular/compiler-cli": "^17.0.4",
+    "@angular/localize": "^17.0.6",
     "@types/date-fns": "^2.6.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
